--- a/POC_PI_AWS-web/src/main/webapp/CompanyList.xhtml
+++ b/POC_PI_AWS-web/src/main/webapp/CompanyList.xhtml
@@ -1,10 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+xmlns:f="http://java.sun.com/jsf/core"
+xmlns:h="http://java.sun.com/jsf/html"
+xmlns:ui="http://java.sun.com/jsf/facelets"
+
+ template="Template.xhtml">
 	
-	<body>
+<ui:define name="title"> Create your company</ui:define>
+    <ui:define name="content">
+
+<h:form>
 	
 	
 <h:dataTable value="#{cMBean.companies}" var="company" border="1">
@@ -30,5 +34,9 @@
 </h:column>
 
 </h:dataTable>
-	</body>
-</html>
+	
+	
+	</h:form>
+	</ui:define>
+
+</ui:composition>
