--- a/POC_PI_AWS-web/src/main/webapp/Event2.xhtml
+++ b/POC_PI_AWS-web/src/main/webapp/Event2.xhtml
@@ -44,7 +44,7 @@ template="Template.xhtml">
         </p:dataTable>
         <p:panel header="Export All Data">
             <h:commandLink>
-                <p:graphicImage value="/icons/xls.png"  />
+                <p:graphicImage value="/icones/xls.png"  />
                 <p:dataExporter type="xls" postProcessor="#{eventConBean.postProcessXLS}"
                     target="mydata" fileName="myexcel" />
             </h:commandLink>
