.Net Deployed and consumed

--- a/POC_PI_AWS-web/src/main/webapp/CompanyCreate.xhtml
+++ b/POC_PI_AWS-web/src/main/webapp/CompanyCreate.xhtml
@@ -24,6 +24,8 @@ xmlns:ui="http://java.sun.com/jsf/facelets"
 <h:commandButton action="#{cMBean.CreateCompany()}" value="create your company" />
 </h:panelGrid>
 
+<h:link outcome="/CompanyList" value="Manage your companies"/>
+
  
 
  
