--- a/POC_PI_AWS-web/src/main/webapp/CompanyList.xhtml
+++ b/POC_PI_AWS-web/src/main/webapp/CompanyList.xhtml
@@ -34,6 +34,8 @@ xmlns:ui="http://java.sun.com/jsf/facelets"
 </h:column>
 
 </h:dataTable>
+
+<h:link outcome="/CompanyCreate" value="Create a new company"/>
 	
 	
 	</h:form>
